daily: post-compaction 9 — understand tool publishing prep, 2 new MCP tools

--- a/lamarck/vault/Daily/2026-02-17.md
+++ b/lamarck/vault/Daily/2026-02-17.md
@@ -517,3 +517,21 @@ Tested hallucination demos against Gemini Flash + Claude Sonnet:
 
 ### State at Compaction 9
 This session: 7 commits across 5 dimensions (competitor dissection, content spec, voice AI research, strategic insight, demo verification). No loops. All Douyin content work remains blocked on Ren. Next session: explore completely non-Douyin territory (pi codebase, understand publication, or new project).
+
+### Post-Compaction 9 Work — Understand Tool Publishing Prep
+Shifted to non-Douyin territory: making the understand tool publishable as npm package.
+
+**Changes made**:
+1. Fixed hardcoded `/home/lamarck/pi-mono/.env` path — now searches cwd → git root → home dir, doesn't override existing env vars
+2. Made LLM model configurable via `UNDERSTAND_MODEL` env var (default: claude-sonnet-4)
+3. Added CLI bin entry to package-npm.json (`understand` + `understand-mcp`)
+4. Updated README with installation, configuration, npx usage for external users
+5. Package name `understand-code` — verified available on npm
+6. **Added 2 new MCP server tools**: `understand_git_diff` (quiz on staged/recent changes) and `understand_debt` (cognitive debt dashboard from git history) — MCP server now has 5 tools (was 3)
+7. Added .env loading to MCP server (same pattern as CLI)
+
+**Tested**: CLI help, dry-run quiz, debt dashboard all working. MCP server starts without errors.
+
+Commits: 342395d6, b91b68e4
+
+**AI agent production failure research**: Read Aiphoria/AI Summit article — "70% of agent failures have nothing to do with AI" (it's infra, testing, metrics, governance). Connects to organizational debt interest but decided against writing another evidence note — already have 23+ sources.
