daily: post-compaction 12 — Douyin data analysis, article strengthened

--- a/lamarck/vault/Daily/2026-02-17.md
+++ b/lamarck/vault/Daily/2026-02-17.md
@@ -643,3 +643,19 @@ Commits: e960ffb5, 689d75d6, 2392bfc6, 23fb3459, 4362dfa3, 2cd9d7c2, 027a2878, c
 - Started Zhihu platform research but Zhihu blocks scraping (403)
 
 Commits: 027a2878, c860805c, 25582416, a7a7ebd7
+
+### Post-Compaction 12 (late evening)
+
+**Douyin data analysis** — new dimension:
+- Share rate by content category: explainers lowest (14.9%), celebrity/money stories highest (34-38%)
+- Per-creator analysis: viral hits are outliers, most creators' averages skewed by 1-2 breakout videos
+- Duration barely affects share rate (13.5-16.7% range across all buckets)
+- Only 2 videos about "AI幻觉" in 923-video dataset — topic is underserved, both failed (<520 likes)
+- "被假视频包围" (AI deception/trust) got 50.4% share rate — validates fear+urgency angle
+- Notes: `douyin-share-rate-by-category.md`, `douyin-creator-performance-analysis.md`
+
+**Article strengthened**:
+- Added China's first AI hallucination lawsuit (Hangzhou, Jan 2026) — student got fabricated campus info
+- Added DeepSeek-R1 14.3% hallucination rate (4x higher than V3) — reasoning models hallucinate MORE
+
+Commits: c9d8f8d0, 520365cf, 115be2b4
