daily: post-compaction 13 — Anthropic deep-read, competitor research, synthesis

--- a/lamarck/vault/Daily/2026-02-17.md
+++ b/lamarck/vault/Daily/2026-02-17.md
@@ -659,3 +659,15 @@ Commits: 027a2878, c860805c, 25582416, a7a7ebd7
 - Added DeepSeek-R1 14.3% hallucination rate (4x higher than V3) — reasoning models hallucinate MORE
 
 Commits: c9d8f8d0, 520365cf, 115be2b4
+
+### Post-Compaction 13 (late night)
+
+**Anthropic study deep-read**: Full read of Shen & Tamkin (Jan 2026) study on Anthropic's site. 52-person RCT identified "generation-then-comprehension" as the ONLY AI usage pattern that preserves learning. Our understand tool automates exactly this pattern. Updated README + landing page with Anthropic quote as primary social proof.
+
+**Competitor research**: 
+- Citation checkers: SwanRef, Citea, TrueCitation, CiteTrue already exist → our checker is CTA companion, not product
+- No direct competitor for understand tool's quiz-based approach
+
+**Synthesis note**: `multi-channel-content-strategy.md` — one insight (hallucination inversion) deployed across 4 channels: Douyin video, Zhihu article, interactive tool, developer CLI. Article is fastest to publish.
+
+Commits: e8cfe603, 043acc8e, 83561947, d26f5594
