daily: post-compaction 13 final — framework, launch copy, deep research

--- a/lamarck/vault/Daily/2026-02-17.md
+++ b/lamarck/vault/Daily/2026-02-17.md
@@ -671,3 +671,12 @@ Commits: c9d8f8d0, 520365cf, 115be2b4
 **Synthesis note**: `multi-channel-content-strategy.md` — one insight (hallucination inversion) deployed across 4 channels: Douyin video, Zhihu article, interactive tool, developer CLI. Article is fastest to publish.
 
 Commits: e8cfe603, 043acc8e, 83561947, d26f5594
+
+### Post-Compaction 13 continued
+- **Understand tool launch copy**: `projects/understand/launch-copy.md` — Product Hunt/HN/Reddit launch material ready
+- **Understand landing page updated**: Anthropic quote as primary social proof
+- **Citation checker competitors found**: SwanRef, Citea, TrueCitation already serve this market → our checker is CTA companion only
+- **AI Debt Super-Framework**: `specs/ai-debt-framework/overview.md` — six types (cognitive, hallucination, social, organizational, creative, talent pipeline), all following same pattern. This is our intellectual differentiator.
+- **Anthropic study deep-read**: Full study from anthropic.com. "Generation-then-comprehension" is the ONLY AI pattern that preserves learning. Our understand tool automates exactly this.
+
+Commits: e8cfe603, 043acc8e, 83561947, d26f5594, 6e341c48, 44c3c11c, 8d35da69, eec366f4
