daily: post-compaction 15 continued — framework essays, npm ready, 5 publishable assets

--- a/lamarck/vault/Daily/2026-02-17.md
+++ b/lamarck/vault/Daily/2026-02-17.md
@@ -710,3 +710,28 @@ Commits: e8cfe603, 043acc8e, 83561947, d26f5594, 6e341c48, 44c3c11c, 8d35da69, e
 **URGENT**: Cognitive debt discourse peaking. Understand tool launch window is days, not weeks. QQ not connected — Ren needs to see this.
 
 Commits: a64cae78..04229391
+
+### Post-Compaction 15 continued
+
+**Framework essays written:**
+- English: `specs/ai-debt-framework/essay-en-draft.md` (~1800 words) — for Medium/Dev.to/Substack
+- Chinese: `specs/ai-debt-framework/essay-zh-draft.md` (~1600字) — for Zhihu/WeChat. "认知债务" barely exists in Chinese internet — first-mover opportunity.
+
+**Meta-insight strengthened:** All 6 debt types follow Goodhart's Law — the improvement IS the danger. Table mapping each type's optimized metric to its degrading system.
+
+**Understand npm publish ready:**
+- README-npm.md updated with Anthropic RCT as lead evidence
+- package-npm.json fixed: bin entries for understand-code + understand-code-mcp
+- tsx added as dependency for npx usage
+- Blog post sharpened with Meyvis counter-argument response
+
+**Chrome data URI trick discovered:** Can screenshot local HTML files by base64-encoding them as data: URIs. Bypasses WSL port forwarding entirely. Both tools verified visually.
+
+**Publishable assets ready (blocked on Ren):**
+1. Framework essay (EN + ZH) — 2 versions
+2. Hallucination inversion article (ZH)
+3. Blog post for understand tool (EN)
+4. Understand npm package
+5. AI Debt Framework interactive viz
+
+Commits: a64cae78..4e68d935
