daily: post-compaction 17 — understand flags, arXiv fallback, Zhihu analysis

--- a/lamarck/vault/Daily/2026-02-17.md
+++ b/lamarck/vault/Daily/2026-02-17.md
@@ -747,3 +747,24 @@ Commits: a64cae78..4e68d935
 - The Zhihu publishing opportunity is clear — almost no competition for this topic in Chinese
 
 Commits this segment: 29a4e3fd (briefing) only — mostly research/analysis
+
+### Post-Compaction 17
+
+**Understand CLI: --format markdown + --count N flags added.** Both tested and working. GitHub Action CI template updated. These make the PR comment workflow functional.
+
+**Hallucination checker: arXiv fallback implemented and tested.**
+- Problem: CrossRef couldn't find "Curse of Recursion" (Shumailov 2024) — false negative
+- Root cause 1: arXiv API blocks browser CORS → fixed with corsproxy.io
+- Root cause 2: arXiv `ti:` prefix only applies to first word → fixed with `ti:word+AND+ti:word` syntax
+- Root cause 3: DOMParser fails with Atom XML namespaces → fixed with regex parsing
+- Result: Real papers now 3/3 verified (was 2/3). Fabricated examples still correctly flagged.
+
+**Zhihu competitive analysis**: Only 3 results for "AI认知债务" on Zhihu. Blue ocean confirmed for Chinese framework essay.
+
+**Next steps:**
+- Still need to verify fabricated examples work with arXiv fallback (shouldn't find them)
+- Consider: update footer text to mention both CrossRef + arXiv as data sources
+- Episode 2 v2 composition is complete but untested render since v2 update
+- All publishing blocked on Ren
+
+Commits this segment: 275c39a7 (understand CLI flags), b034f22d (arXiv fallback)
