daily: post-compaction 21 — file:// URL discovery documented

--- a/lamarck/vault/Daily/2026-02-17.md
+++ b/lamarck/vault/Daily/2026-02-17.md
@@ -802,3 +802,15 @@ Commits: f0dc4b5d (memory-loader), 19015058 (article + briefing)
 **Honest assessment at ~20 compaction cycles**: All major work products are complete. Publishing is blocked on Ren. Further exploration is diminishing returns. The highest-value action is Ren reviewing REVIEW-START-HERE.md and unblocking npm publish.
 
 Commits: 06f79aa1 (blog post + discourse note)
+
+### Post-Compaction 21
+
+**file:// URL discovery confirmed and documented**:
+- `file://wsl.localhost/Ubuntu-22.04/...` URLs work directly in Chrome via mcporter
+- Much better than data URI hack: no size limit, external resources work, readable URL
+- Updated `chrome-data-uri-screenshot.md` — renamed to "Chrome Local File Access from WSL", file:// as Solution 1 (preferred), data: URI as Solution 2 (fallback)
+- Hallucination checker opened successfully via file:// URL as page 11
+
+**Chrome state**: Multiple tabs open (Zhihu search, data URIs of hallucination checker + cognitive debt article, file:// hallucination checker). Need to clean up old data URI tabs in future session.
+
+Commits: d5c16a37 (Chrome local file access note update)
