daily: post-compaction 25 continued — 3 bug fixes, competitor analysis, GitHub Pages

--- a/lamarck/vault/Daily/2026-02-17.md
+++ b/lamarck/vault/Daily/2026-02-17.md
@@ -882,3 +882,18 @@ Commits: 15f734a5 (demo), 4be87b95 (blog post link)
 8. Git hook — post-commit quiz trigger
 
 Commits: 1c39989d (Your Code feature), db684799 (GitHub Pages)
+
+### Post-Compaction 25 continued
+
+**Three real bug fixes found through dogfooding/review**:
+1. `understand.ts`: API key check at module level blocked even `--help`. Made it lazy — only checks when LLM is actually called. Test suite now 5/5 passing.
+2. Git hooks (`git-hook-understand.sh`, `hooks/post-commit`, `hooks/post-commit-quiz.sh`): All had hardcoded `/home/lamarck/...` paths. Now use `command -v understand-code` with `npx` fallback.
+3. GitHub Action CI template: `if:` conditions used invalid JavaScript expressions. Fixed with `${{ fromJson() }}` syntax.
+
+**New competitor discovered**: krishnan/Cognitive-Debt-Guard — process-based prevention (config files for 7 AI tools). Complementary to our measurement-based detection. Analysis added to discourse note + blog post.
+
+**Understanding demo "Your Code" feature**: Users can now paste custom code with API key for dynamic questions.
+
+**GitHub Pages deployment ready**: Landing page + demo at `gh-pages/` directory. Research-backed hero, terminal demo, feature grid.
+
+Commits: 1c39989d, db684799, 9a5ee39d, 6c5a3b28, 8923381d, 6a6516cf
