research: self-evolution frameworks survey — DGM, Gödel Agent, mutagent, C/R systems
why: Ren tasked research into how existing frameworks implement code self-modification for autonomous agent evolution
step: surveyed 8+ frameworks across 3 paradigms (prompt evolution, runtime patching, evolutionary code generation), analyzed mechanisms and mapped to pi architecture
next: design concrete implementation plan for pi self-evolution based on DGM pattern (tmux isolation + git versioning + application-level state migration)

--- a/lamarck/vault/Daily/2026-02-17.md
+++ b/lamarck/vault/Daily/2026-02-17.md
@@ -897,3 +897,39 @@ Commits: 1c39989d (Your Code feature), db684799 (GitHub Pages)
 **GitHub Pages deployment ready**: Landing page + demo at `gh-pages/` directory. Research-backed hero, terminal demo, feature grid.
 
 Commits: 1c39989d, db684799, 9a5ee39d, 6c5a3b28, 8923381d, 6a6516cf
+
+## Autopilot 0010 — Self-Evolution Frameworks Research
+
+### Task from Ren
+Research existing self-evolving AI agent frameworks to understand how they implement code self-modification. The goal is to find mechanisms we can integrate into pi's codebase. Key distinction from Ren: this is NOT about making the extension system more user-friendly — it's about enabling autonomous code modification during self-directed runs, with safety mechanisms.
+
+### Research Completed
+Surveyed 8+ frameworks/papers across 3 paradigms:
+
+**Paradigm 1: Prompt/Workflow Evolution** (OpenAI cookbook, EvoAgentX, Hive)
+- Evolves prompts or agent topologies, not source code. Low relevance.
+
+**Paradigm 2: Runtime Code Patching** (Gödel Agent, mutagent)
+- Gödel Agent: Python exec() + setattr() monkey-patching. LLM proposes new function → compile → inject into running process. No rollback.
+- mutagent: Sophisticated metaclass-based in-place class redefinition. ModuleManager tracks version history, can save to filesystem. Most elegant Python solution but Python-specific.
+
+**Paradigm 3: Evolutionary Code Generation** (Darwin Gödel Machine — most relevant)
+- DGM (Sakana AI + UBC): Archive of agent variants. Each generation: select parent → Docker container → coding agent modifies code → evaluate on benchmarks → keep if improved. Improved SWE-bench 20% → 50%.
+- Key: Docker for isolation, patch files for versioning, fresh container (no state migration), explicit evaluation.
+
+**Bonus: Checkpoint/Restore Survey** (Eunomia, 2025)
+- Application-level vs system-level C/R tradeoffs
+- Stateless restore (reload from saved data) vs stateful (exact process image)
+- LangGraph checkpoint mechanism for agent workflows
+
+### Key Takeaway
+**No existing framework solves state migration.** DGM avoids it (fresh containers). mutagent avoids it (in-process patching). Gödel Agent avoids it (monkey-patching). This is the genuinely hard unsolved problem for our use case — we need ongoing session continuity across code versions.
+
+### Proposed Architecture for Pi
+1. Extension-level (hot, safe): already works via reload
+2. Core code (cold, needs safety): edit → build → tmux test → migrate state → switch over → rollback if crash
+3. Supervisor script: simple bash watchdog outside pi
+4. Git as version control (not DGM-style patch files)
+5. Application-level state migration: most state already file-based, main challenges are lock handoff and in-flight operations
+
+Full analysis: `vault/Notes/self-evolution-frameworks-research.md`
